--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: git-gateway
-  branch: master
+  repo: sarahbethlundblad/one-click-hugo-cms
+  branch: main
 publish_mode: editorial_workflow
 media_folder: "site/static/img" # Folder where user uploaded files should go
 public_folder: "img"
